--- a/.github/workflows/pr-develop-branch.yml
+++ b/.github/workflows/pr-develop-branch.yml
@@ -7,11 +7,9 @@ on:
   pull_request:
     # The events are that a PR is opened, or when a commit is pushed
     # to a branch that has an existing pull request
-    types:
-      - opened
-      - synchronize
+    types: [opened, synchronize, reopened]
     # The branches filter allows to specify that this workflow should only
-    # run if the branch name is "develop". This way we prevent this workflow
+    # run if the base branch name is "develop". This way we prevent this workflow
     # from running when PRs are opened on other branches
     branches:
       - develop
