--- a/.github/workflows/pr-develop-branch.yml
+++ b/.github/workflows/pr-develop-branch.yml
@@ -60,7 +60,9 @@ jobs:
       - name: 'Create delta packages for new, modified or deleted metadata'
         run: | 
           mkdir changed-sources
-          sfdx sgd:source:delta --to "HEAD" --from "HEAD^" --output changed-sources/ --generate-delta --source force-app/ 
+          BRANCH_ORIGEM=$(git rev-parse --abbrev-ref HEAD)
+          BRANCH_DESTINO=${{ github.base_ref }}
+          sfdx sgd:source:delta --to "$BRANCH_ORIGEM" --from "$BRANCH_DESTINO" --output changed-sources/ --generate-delta --source force-app/ 
 
       - name: 'Scan code'
         run: |
