--- a/.github/workflows/pr-develop-branch.yml
+++ b/.github/workflows/pr-develop-branch.yml
@@ -62,7 +62,8 @@ jobs:
           mkdir changed-sources
           BRANCH_ORIGEM=$(git rev-parse --abbrev-ref HEAD)
           BRANCH_DESTINO=${{ github.base_ref }}
-          sfdx sgd:source:delta --to "$BRANCH_ORIGEM" --from "$BRANCH_DESTINO" --output changed-sources/ --generate-delta --source force-app/ 
+          BRANCH_DESTINO_SHA=$(git rev-parse "$BRANCH_DESTINO")
+          sfdx sgd:source:delta --to "$BRANCH_ORIGEM" --from "$BRANCH_DESTINO_SHA" --output changed-sources/ --generate-delta --source force-app/ 
 
       - name: 'Scan code'
         run: |
