--- a/.github/workflows/pr-develop-branch.yml
+++ b/.github/workflows/pr-develop-branch.yml
@@ -62,7 +62,11 @@ jobs:
           mkdir changed-sources
           BRANCH_ORIGEM=$(git rev-parse --abbrev-ref HEAD)
           BRANCH_DESTINO=${{ github.base_ref }}
-          BRANCH_DESTINO_SHA=$(git rev-parse "$BRANCH_DESTINO")
+          git fetch origin "+refs/heads/*:refs/remotes/origin/*"
+          BRANCH_DESTINO_SHA=$(git rev-parse origin/"$BRANCH_DESTINO")
+          echo "Branch de origem: $BRANCH_ORIGEM"
+          echo "Branch de destino: $BRANCH_DESTINO"
+          echo "SHA da branch de destino: $BRANCH_DESTINO_SHA"
           sfdx sgd:source:delta --to "$BRANCH_ORIGEM" --from "$BRANCH_DESTINO_SHA" --output changed-sources/ --generate-delta --source force-app/ 
 
       - name: 'Scan code'
