--- a/.github/workflows/pr-develop-branch.yml
+++ b/.github/workflows/pr-develop-branch.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
     branches:
-      - "develop"
+      - develop
     paths:
       - 'force-app/**'
 
@@ -76,7 +76,7 @@ jobs:
           cd ..
 
       - name: Upload SARIF file
-        uses: github/codeql-action/upload-sarif@v1
+        uses: github/codeql-action/upload-sarif@v3.12
         with:
           sarif_file: changed-sources/apexScanResults.sarif
 
