--- a/.github/workflows/push-develop-branch.yml
+++ b/.github/workflows/push-develop-branch.yml
@@ -21,13 +21,15 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: 'Read PR Body'
-        env:
-          PR_BODY: ${{ github.event.pull_request.body }}
+      - name: 'Download tests to run'
+        uses: actions/download-artifact@v3
+        with:
+          name: tests_to_run
+          path: .
+          
+      - name: 'Read tests to run'
         run: |
-          echo $PR_BODY > ./pr_body.txt
-          node ./parsePR.js              
-          TESTS=$(cat testsToRun.txt)       
+          TESTS=$(cat tests_to_run.txt)
           echo "APEX_TESTS=$TESTS" >> $GITHUB_ENV
           
       - name: 'Install Salesforce CLI'
