--- a/.github/workflows/pr-develop-branch.yml
+++ b/.github/workflows/pr-develop-branch.yml
@@ -8,6 +8,10 @@ on:
     paths:
       - 'force-app/**'
 
+permissions:
+  contents: read
+  security-events: write
+
 jobs:
   validate-deployment-on-develop-org:
     runs-on: ubuntu-latest
@@ -96,6 +100,8 @@ jobs:
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: changed-sources/apexScanResults.sarif
+          token: ${{ secrets.GITHUB_TOKEN }}
+          wait-for-processing: true
 
       - name: 'Check-only deploy delta changes - run specified tests'
         if: ${{ env.APEX_TESTS != 'all' }}
