--- a/.github/workflows/pr-develop-branch.yml
+++ b/.github/workflows/pr-develop-branch.yml
@@ -8,17 +8,21 @@ on:
     paths:
       - 'force-app/**'
 
+permissions:
+  contents: read
+  security-events: write
+
 jobs:
   validate-deployment-on-develop-org:
     runs-on: ubuntu-latest
     if: ${{ github.actor != 'dependabot[bot]' }}
     steps:
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
           node-version: '20.15.1'
 
       - name: 'Checkout source code'
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
@@ -37,7 +41,7 @@ jobs:
         if: success()
 
       - name: 'Upload tests to run'  
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: tests_to_run
           path: tests_to_run.txt
@@ -80,6 +84,12 @@ jobs:
           echo "SHA da branch de destino: $BRANCH_DESTINO_SHA"
           sfdx sgd:source:delta --to "$BRANCH_ORIGEM" --from "$BRANCH_DESTINO_SHA" --output changed-sources/ --generate-delta --source force-app/ 
 
+      - name: 'Upload metadata artifact'
+        uses: actions/upload-artifact@v4
+        with:
+          name: metadata
+          path: changed-sources
+
       - name: 'Scan code'
         run: |
           cd changed-sources
@@ -90,6 +100,8 @@ jobs:
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: changed-sources/apexScanResults.sarif
+          token: ${{ secrets.GITHUB_TOKEN }}
+          wait-for-processing: true
 
       - name: 'Check-only deploy delta changes - run specified tests'
         if: ${{ env.APEX_TESTS != 'all' }}
