--- a/.github/workflows/push-develop-branch.yml
+++ b/.github/workflows/push-develop-branch.yml
@@ -88,6 +88,13 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           wait-for-processing: true
 
+      - name: 'Analyze SARIF file'
+        uses: github/codeql-action/analyze@v3
+        with:
+          category: "Security"
+          token: ${{ secrets.GITHUB_TOKEN }}
+        if: success()
+
       - name: 'Check-only deploy delta changes - run specified tests'
         if: ${{ env.APEX_TESTS != 'all' }}
         run: |
