--- a/.github/workflows/pr-develop-branch.yml
+++ b/.github/workflows/pr-develop-branch.yml
@@ -103,6 +103,12 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           wait-for-processing: true
 
+      - name: 'Initialize CodeQL'
+        uses: github/codeql-action/init@v3
+        with:
+          languages: apex
+          config-file: .github/codeql/codeql-config.yml
+
       - name: 'Analyze SARIF file'
         uses: github/codeql-action/analyze@v3
         with:
