--- a/.github/workflows/pr-develop-branch.yml
+++ b/.github/workflows/pr-develop-branch.yml
@@ -115,7 +115,7 @@ jobs:
       - name: 'Validate Deployment to Org - run all tests'
         if: ${{ env.APEX_TESTS == 'all' }}
         run: |
-          sf project deploy validate --source-dir "changed-sources/force-app" --test-level RunLocalTests  --json
+          sf project deploy validate --source-dir "changed-sources/force-app" --test-level RunLocalTests --json
 
       - name: 'Deploy destructive changes (if any)'
-        run: sf project deploy start --metadata-dir "changed-sources/destructiveChanges" --check-only --ignore-warnings
+        run: sf project deploy validate --metadata-dir "changed-sources/destructiveChanges" --ignore-warnings --json
