--- a/.github/workflows/pr-develop-branch.yml
+++ b/.github/workflows/pr-develop-branch.yml
@@ -105,6 +105,8 @@ jobs:
           sarif_file: changed-sources/apexScanResults.sarif
           token: ${{ secrets.GITHUB_TOKEN }}
           wait-for-processing: true
+          ref: refs/heads/develop
+          
 
       - name: 'Validate Deployment to Org - run specified tests'
         if: ${{ env.APEX_TESTS != 'all' }}
